policies/constraint_templates/block_host_namespace.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sblockhostnamespace
  annotations:
    description: "Blocks host namespace sharing (MITRE ATT&CK T1611 - Escape to Host)"
spec:
  crd:
    spec:
      names:
        kind: K8sBlockHostNamespace
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sblockhostnamespace
        
        violation[{"msg": msg}] {
          input.review.object.spec.hostNetwork
          msg := "hostNetwork is not allowed"
        }
        
        violation[{"msg": msg}] {
          input.review.object.spec.hostPID
          msg := "hostPID is not allowed"
        }
        
        violation[{"msg": msg}] {
          input.review.object.spec.hostIPC
          msg := "hostIPC is not allowed"
        }
